Dropdown links overflow fixed

--- a/ReliefLink/home/static/home/style.css
+++ b/ReliefLink/home/static/home/style.css
@@ -114,9 +114,11 @@
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1;
+    overflow: hidden;
 }
 
-.dropdown-content a, .dropdown-content form button {
+
+.dropdown-content a , .dropdown-content form button {
     color: #fff;
     padding: 0.5rem 1rem;
     text-decoration: none;
@@ -129,6 +131,10 @@
     width: 100%;
     font-size: 16px;
 }
+
+/* .dropdown-content a{
+    background-color: #28a745;
+} */
 
 .dropdown-content a:hover, .dropdown-content form button:hover {
     background-color: #ff9800;
